--- a/src/component/index.scss
+++ b/src/component/index.scss
@@ -3,9 +3,10 @@
 @import "item/item";
 @import "item/item_link";
 @import "item/item_price";
+@import "item/item_service";
 
 @import "content/content-main";
+@import "content/content-form";
 
 @import "portfolio/portfolio";
-
-@import "price/price";
+@import "service/service";
