--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,7 @@
 .item__title {
   font-size: 1.1rem;
   font-weight: 800;
+  line-height: 1.1;
   margin-bottom: 10px;
 }
 
@@ -49,6 +50,12 @@
   transform: scale(0.95);
 }
 
+@media all and (max-width: 768px) {
+  .item__title {
+    font-size: 1rem;
+  }
+}
+
 .item_link {
   display: block;
   padding: 30px;
@@ -58,6 +65,12 @@
 .item_link:hover, .item_link:focus {
   background-color: #1a1a1a;
   text-decoration: none;
+}
+
+@media all and (max-width: 768px) {
+  .item_link {
+    padding: 15px;
+  }
 }
 
 .item_price {
@@ -206,6 +219,36 @@
   }
 }
 
+.item_service {
+  border: 1px solid #3e3e3e;
+  padding: 20px;
+}
+
+.item_service__image {
+  border: 1px solid #3e3e3e;
+  background: no-repeat center / contain;
+  height: 150px;
+}
+
+.item_service__image--first {
+  height: 400px;
+}
+
+@media all and (max-width: 768px) {
+  .item_service__image {
+    height: 100px;
+  }
+  .item_service__image--first {
+    height: 285px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .item_service__image {
+    height: 120px;
+  }
+}
+
 .content-main {
   position: relative;
   padding: 40px;
@@ -275,20 +318,74 @@
 
 @media all and (max-width: 992px) {
   .content-main__title {
-    margin-top: 80px;
+    margin-top: 20px;
+    font-size: 32px;
   }
 }
 
 @media all and (max-width: 768px) {
   .content-main__title {
-    margin-top: 40px;
-    font-size: 32px;
+    margin-top: 60px;
+    text-indent: 0px;
   }
 }
 
 @media all and (max-width: 576px) {
+  .content-main {
+    padding: 20px;
+  }
   .content-main__title {
-    margin-top: 20px;
+    font-size: 20px;
+  }
+  .content-main__subtitle {
+    font-size: 10px;
+    top: 20px;
+    left: 20px;
+  }
+}
+
+.content-form__intro {
+  max-width: calc(100% - 40px);
+  color: #d5d5d5;
+}
+
+.content-form__form {
+  margin-top: 40px;
+}
+
+.content-form__animation {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.content-form__animation #path, .content-form__animation #elem {
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s;
+}
+
+.content-form__animation:hover #path, .content-form__animation:focus #path {
+  stroke: #d5d5d5;
+}
+
+.content-form__animation:hover #elem, .content-form__animation:focus #elem {
+  fill: #ffffff;
+}
+
+.content-form_callback {
+  border: 1px solid #3e3e3e;
+  padding: 40px;
+}
+
+@media all and (max-width: 768px) {
+  .content-form_callback {
+    padding: 20px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .content-form {
+    padding-top: 40px;
   }
 }
 
@@ -325,8 +422,41 @@
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.price {
-  display: grid;
-  grid-gap: 10px;
+.portfolio_large {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+@media all and (max-width: 992px) {
+  .portfolio_navbar {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 576px) {
+  .portfolio {
+    display: block;
+  }
+}
+
+.service {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.service__col--first {
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+@media all and (max-width: 992px) {
+  .service {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 576px) {
+  .service {
+    display: block;
+  }
 }
