--- a/src/component/header/_header.scss
+++ b/src/component/header/_header.scss
@@ -33,7 +33,7 @@
     &__nav{
         position: fixed;
         top: 30px;
-        right: $spacer;
+        right: 30px;
 
         height: 50px;
         width: 50px;
@@ -51,26 +51,32 @@
         }
     }
 }
-@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
     .header{
-        &__logo{
-            width: 30px;
-            left: 30px;
+        &__nav{
+            height: 34px;
+            width: 34px;
+            padding: 6px;
         }
     }
+
 }
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
     .header{
         &__top{
-            padding-top: $spacer/2;
+            padding: $spacer/2 0;
         }
         &__logo{
-            top: 26px;
-            left: 12px;
-            width: 24px;
+            margin-right: $spacer/2;
+            transform: translateY(-2px);
+            &-svg{
+                width: 80px;
+            }
         }
         &__nav{
-            top: $spacer/2;
+            top: 9px;
+            right: 12px;
         }
         &__link{
             display: none;
