--- a/src/component/item/_item.scss
+++ b/src/component/item/_item.scss
@@ -2,6 +2,7 @@
     &__title{
         font-size: 1.1rem;
         font-weight: $font-weight-bold;
+        line-height: $line-height-heading;
         margin-bottom: $spacer/4;
 
         &_has-icon{
@@ -34,6 +35,14 @@
         &:hover, &:focus{
             filter: grayscale(0);
             transform: scale(.95);
+        }
+    }
+}
+
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .item{
+        &__title{
+            font-size: 1rem;
         }
     }
 }
