--- a/src/component/item/_item_link.scss
+++ b/src/component/item/_item_link.scss
@@ -8,3 +8,9 @@
         text-decoration: none;
     }
 }
+
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .item_link{
+        padding: $grid-gutter-width/2;
+    }
+}
