--- a/src/portfolio.pug
+++ b/src/portfolio.pug
@@ -3,46 +3,59 @@ html(lang="ru")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Text Page
+        title Portfolio
 
-        link(href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,700;1,700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet")
-        link(href='./css/style.css', rel='stylesheet')
+        link(rel="preconnect" href="https://fonts.gstatic.com")
+        link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet")
+        link(href='/css/style.css', rel='stylesheet')
+        link(href='/css/portfolio.css', rel='stylesheet')
 
     body
-        script(src="http://code.jquery.com/jquery-3.3.1.min.js")
-        section.content.container
-            ul.breadcrumbs
-                li.breadcrumbs__item
-                    a.breadcrumbs__link(href="/catalog.html") Лифты
-                li.breadcrumbs__item.breadcrumbs__item--active Текстовая страница
-            h1 Заголовок h1
-            p Maxime placeat, facere possimus, omnis voluptas nulla vero eos. Quam nihil molestiae non recusandae corrupti, quos dolores eos, qui. Id est eligendi optio, cumque nihil impedit, quo minus id, quod maxime. Eligendi optio, cumque nihil molestiae consequatur, vel illum. Temporibus autem quibusdam et expedita distinctio. Saepe eveniet, ut perspiciatis, unde omnis dolor. Provident, similique sunt in ea commodi autem quibusdam et voluptates repudiandae sint.
-            img(src="../demo/demo.jpg" alt="" title="")
-            h2 Заголовок h2
-            p Velit, sed quia non provident, similique sunt in culpa, qui dolorem. Ducimus, qui dolorem ipsum, quia. Quibusdam et accusamus et accusamus et quas. Quo voluptas sit, amet, consectetur, adipisci velit, sed quia voluptas. Veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut enim ipsam. Esse, quam nihil impedit, quo voluptas. Eaque ipsa, quae ab illo inventore veritatis et voluptates.
-            blockquote Maxime placeat, facere possimus, omnis voluptas nulla vero eos. Quam nihil molestiae non recusandae corrupti, quos dolores eos, qui. Id est eligendi optio, cumque nihil impedit, quo minus id, quod maxime. Eligendi optio, cumque nihil molestiae consequatur, vel illum. Temporibus autem quibusdam et expedita distinctio.
-            h3 Заголовок h3
-            p Quo voluptas sit, amet, consectetur, adipisci velit, sed quia voluptas. Veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut enim ipsam. Esse, quam nihil impedit, quo voluptas. Eaque ipsa, quae ab illo inventore veritatis et voluptates.
-            h4 Заголовок h4
-            p Ipsam voluptatem, quia dolor repellendus quis nostrum exercitationem.
-            h5 Заголовок h5
-            p Ipsam voluptatem, quia dolor repellendus quis nostrum exercitationem. Asperiores repellat. accusamus et harum quidem rerum hic tenetur. Accusantium doloremque laudantium, totam rem aperiam eaque. Eveniet, ut labore et expedita. Earum rerum hic tenetur a sapiente delectus, ut aut perferendis. Veritatis et dolore magnam aliquam quaerat voluptatem sequi. Aliquid ex ea commodi autem vel illum. Sint et voluptates repudiandae sint.
-            h6 Заголовок h6
-            ul
-                li sapiente delectus, ut enim ipsam voluptatem, quia consequuntur. 
-                li esse, quam nihil molestiae non recusandae illum, qui ratione voluptatem accusantium. 
-                li adipisci velit, sed quia.
-            p Ipsam voluptatem, quia dolor repellendus quis nostrum exercitationem. Asperiores repellat. accusamus et harum quidem rerum hic tenetur. Accusantium doloremque laudantium, totam rem aperiam eaque. Eveniet, ut labore et expedita. Earum rerum hic tenetur a sapiente delectus, ut aut perferendis. Veritatis et dolore magnam aliquam quaerat voluptatem sequi. Aliquid ex ea commodi autem vel illum. Sint et voluptates repudiandae sint.
-            table
-                thead
-                    tr
-                        th Колонка 1
-                        th Колонка 2
-                tbody
-                    tr
-                        td Значение 1
-                        td Значение 2
-                    tr
-                        td Значение 3
-                        td Значение 4          
+        script(src="/js/jquery.min.js")
+        include component/mixin.pug
+        include component/header/header.pug
+        .container
+            section.container__inner.mb-5
+                h1.h3 Работы по тегу 
+                    span.text-green #логотип 
+                //- Теги
+                .tags
+                    a.tags__item(href="#") Все работы
+                    a.tags__item.tags__item--active(href="#") Логотип
+                    a.tags__item(href="#") Фирменный стиль
+                    a.tags__item(href="#") Полиграфия
+                    a.tags__item(href="#") Сайт
+                    a.tags__item(href="#") SEO
+                //- Работы
+                .portfolio.mt-3
+                    +portfolio-link("text.html", "", "/demo/portfolio-1.jpg", "EuroComm", "Сайт-визитка на MODx Revo")
+                    +portfolio-link("text.html", "", "/demo/portfolio-2.jpg", "KAM fish", "Логотип и иконки для хайлайтс")
+                    +portfolio-link("text.html", "", "/demo/portfolio-3.jpg", "Pelibox", "Открытки для доставки еды")
+                    +portfolio-link("text.html", "", "/demo/portfolio-2.jpg", "Pelibox", "Открытки для доставки еды")
+                    +portfolio-link("text.html", "", "/demo/portfolio-3.jpg", "KAM fish", "Логотип и иконки для хайлайтс")
+                    +portfolio-link("text.html", "", "/demo/portfolio-1.jpg", "EuroComm", "Сайт-визитка на MODx Revo")
+                .pagination.mt-3
+                    a.pagination__link(href="#") 1
+                    span.pagination__link.pagination__link--active 2
+                    a.pagination__link(href="#") 3
+                    a.pagination__link(href="#") 4
+                    a.pagination__link(href="#") 5
+            //- Contact Form
+            aside.container__inner.content-form.content-form_callback
+                h4.h2 Вам нужно разработать классный 
+                    span.text-green логотип
+                    | ? 
+                p.lead.content-form__intro Оставьте заявку и мы свяжемся с вами и проконсультируем
+                form.form.content-form__form
+                    .form__group.row
+                        .col-4.col-xs-12
+                            input.input.input--has-validation.input--full.phone(type="tel" placeholder="Телефон *")
+                        .col-8.col-xs-12
+                            button.btn.btn_action(type="submit") Оставить заявку
+        include component/footer/footer.pug
+        script(src="./js/jquery.inputmask.min.js")
+
+        link(href='./css/jquery.fancybox.min.css', rel='stylesheet')
+        script(src="./js/jquery.fancybox.min.js")
+        
         script(src="./js/app.min.js")
