--- a/src/tilda.pug
+++ b/src/tilda.pug
@@ -193,49 +193,11 @@ html(lang="ru")
                             </animateMotion>
                         </svg>
         include component/footer/footer.pug
+        include component/form/formHidden.pug
+        
         .modal.modal_form#hidden-info
             p.h4.modal_form__title Топ-10 интеграций с  
                 span.text-green Tilda 
-        .modal.modal_form#hidden-form
-            p.h4.modal_form__title 
-                span.text-green Brief 
-                | на разработку сайта
-            p Заполните бриф сейчас и стоимость сохраниться за вами даже после окончания акционного предложения.
-            form.form
-                p.text-small.text-bold Контактные данные
-                .form__group.row
-                    .col-6
-                        input.input.input--full(type="Email" placeholder="E-mail * ")
-                    .col-6
-                        input.input.input--full.phone(type="tel" placeholder="Телефон")
-                p.text-small.text-bold.mt-2 О вашем проекте
-                .form__group.row
-                    .col-6
-                        input.input.input--full(type="text" placeholder="Название компании / проекта")
-                    .col-6
-                        input.input.input--full(type="text" placeholder="Сфера деятельности")
-                p.text-small.text-bold.mt-2 Как с вами лучше связаться?
-                .form__group.row
-                    .col-6
-                        .checkbox.mb-1
-                            input.checkbox__input#emailTypeBrief(type="checkbox" name="emailType")
-                            label.checkbox__label(for="emailTypeBrief") Написать на e-mail
-                        .checkbox
-                            input.checkbox__input#phoneTypeBrief(type="checkbox" name="phoneType")
-                            label.checkbox__label(for="phoneTypeBrief") Перезвонить
-                    .col-6
-                        .checkbox.mb-1
-                            input.checkbox__input#messTypeBrief1(type="checkbox" name="messType1")
-                            label.checkbox__label(for="messType1Brief") Telegram
-                        .checkbox
-                            input.checkbox__input#messType2Brief(type="checkbox" name="messType2")
-                            label.checkbox__label(for="messType2Brief") WhatsApp
-                .form__group.mt-3
-                    button.btn.btn_action(type="submit") Обсудить проект
-                    .mt-2.form__agree.checkbox
-                        input.checkbox__input#agreeInlineBrief(type="checkbox" name="agreeInline" checked="checked" required="required")
-                        label.checkbox__label(for="agreeInlineBrief") согласен с обработкой 
-                            a.form__link-inverse(href="/policy.pdf" target="_blank") персональных данных
         .modal.modal_form#promo
             p.h4.modal_form__title Тариф 
                 span.text-green PROMO 
